fix blockquote spacing for small screens

--- a/static/global.css
+++ b/static/global.css
@@ -41,6 +41,8 @@ a {
 	text-decoration: none;
 }
 
+blockquote { margin: 0 1.5em; }
+
 .text-center {text-align:center;}
 .opacity-75 {opacity:.75}
 .mx-auto { margin-left: auto; margin-right: auto; }
